# ray_tracer

./: CMakeLists.txt  main.c
parsing/: simple_obj_parser.c  simple_obj_parser.h
raytracer/data_structures/: Tracable.c  Tracable.h  bounding_box.h  camera.c  camera.h  data_structs.c  data_structs.h  kd_tree.c  kd_tree.h  matrix.h  ray.c  ray.h  render_workload.c  render_workload.h  scene.h  trace_result.c  trace_result.h  triangle.c  triangle.h  vec4.c  vec4.h
raytracer/data_structures/math/: vec4_math.c  vec4_math.h
raytracer/models/: simple_triangle_mesh.c  simple_triangle_mesh.h
screen/: color.c  color.h  screen.c  screen.h
util/: threadsafe_workset.c  threadsafe_workset.h
util/ds/: arraylist.t  arraylist_color.c  arraylist_color.h  arraylist_int.c  arraylist_int.h  arraylist_ray.c  arraylist_ray.h  arraylist_render_workload.c  arraylist_render_workload.h  arraylist_tracable.c  arraylist_tracable.h  arraylist_triangle.c  arraylist_triangle.h  arraylist_vec4.c  arraylist_vec4.h
